--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,12 @@
   <title>Performance Electrics</title>
   <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
   <style type="text/css">
-    img {}
+    body {margin: 0;}
+    img {display: block; max-width: 100%;}
   </style>
 </head>
 <body>
-  <a href="index3.html"><img src="images/page-kunststrom.png" alt="Kunststrom Page" /></a>
+  <img src="images/2.png" alt="Kunststrom Page" />
 </body>
 </html>
 
