--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
   <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
   <style type="text/css">
     body {margin: 0;}
-    img {display: block; max-width: 100%;}
+    img {display: block; max-width: 100%; margin: auto;}
   </style>
 </head>
 <body>
