--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
   <title>Performance Electrics</title>
   <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
   <style type="text/css">
-    body {margin: 0;}
+    body {background: #eee; margin: 0;}
     img {display: block; max-width: 100%; margin: auto;}
   </style>
 </head>
