--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <a href="index3.5.html"><img src="images/3.png" alt="Kunststrom Page" /></a>
+  <a href="index3-5.html"><img src="images/3.png" alt="Kunststrom Page" /></a>
 </body>
 </html>
 
