--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <a href="index2.html"><img src="images/1.png" alt="Home Page" /></a>
+  <a href="index2.html"><img src="images/home.png" alt="Home Page" /></a>
 </body>
 </html>
 
