--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <a href="index3.html"><img src="images/2.png" alt="Kunststrom Page" /></a>
+  <a href="index3.html"><img src="images/home-de.png" alt="Kunststrom Page" /></a>
 </body>
 </html>
 
