--- a/index3-5.html
+++ b/index3-5.html
@@ -9,7 +9,8 @@
   </style>
 </head>
 <body>
-  <a href="index4.html"><img src="images/3-5.png" alt="Kunststrom Page" /></a> 
+  <!-- <a href="index4.html"></a> -->
+  <img src="images/pop-upTEXT.png" alt="Pop-UpTEXT" />
 </body>
 </html>
 
